namespace java com.ishangke.edunav.commoncontract.model

/**
 * ResponseBo
 */
struct ResponseBo {
  1: i32 status
  2: string messageKey
}

